Downgrade to java 8.